15-Jan-2012 Modules at the top-level namespace were duplicated even though they were used as fields for another top-level module.

15-Jan-2012 Dependency graph generation used to be able to create multiple DependencyNodes for a single IModule's child dependencies.

14-Jan-2012 QMakeBuilder now distinguishes between QMAKE_CFLAGS and QMAKE_CXXFLAGS.

14-Jan-2012 Gcc and Mingw, -Wall and -Wextra are set first on the command line so that subsequent warning disables work.

14-Jan-2012 QMake .pro files now have QMAKE_CC, QMAKE_CXX, QMAKE_LINK and QMAKE_MOC variables set.

14-Jan-2012 The IgnoreStandardIncludePaths C compiler option really doesn't inject the compiler include paths. VisualC is different, as it assumes an environment is set up.

14-Jan-2012 Added Qt moc support for QMakeBuilder.

14-Jan-2012 Fixing VSSolutionBuilder for .vcxprojs for header files with custom build steps not appearing under the Header Files filter in the solution explorer.

14-Jan-2012 Added Qt moc support for the VSSolutionBuilder, for both .vcproj and .vcxproj.

14-Jan-2012 Issue 55. DynamicLibrary dependency checking no longer compares against the static import library, which is not always written after incremental code updates, so gives false positives about the need to relink.

14-Jan-2012 Native build dependency checking will now output reasons for dependency failures when running with -verbosity=3, rather than just in debug mode.

14-Jan-2012 Add a new property to Opus.Core.IModule, ProxyPath, that allows a module to proxy data on another part of a storage medium. For example, if an AddRelativePaths(this, ...) function is called, 'this' will return the proxied path, not the package directory that the module refers to. The ProxyPath can be relative (to the package directory) or absolute.

13-Jan-2012 QtCommon.MocOptionCollection now implements the QtCommon.IMocOptions interface.

12-Jan-2012 Allow packages to have versions containing dashes.
